cmake_minimum_required (VERSION 2.6)

project(NaptimeAlgorithm)

include(CheckCXXCompilerFlag)
CHECK_CXX_COMPILER_FLAG("-std=c++11" COMPILER_SUPPORTS_CXX11)
CHECK_CXX_COMPILER_FLAG("-std=c++0x" COMPILER_SUPPORTS_CXX0X)
if(COMPILER_SUPPORTS_CXX11)
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
elseif(COMPILER_SUPPORTS_CXX0X)
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++0x")
else()
        message(STATUS "The compiler ${CMAKE_CXX_COMPILER} has no C++11 support. Please use a different C++ compiler.")
endif()

set(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin)

add_executable(Ex002 Ex002/main.cpp)
add_executable(Ex003 Ex003/main.cpp)
add_executable(Ex049 Ex049/main.cpp)
add_executable(Ex053 Ex053/main.cpp)
add_executable(Ex062 Ex062/main.cpp)
add_executable(Ex078 Ex078/main.cpp)
add_executable(Ex105 Ex105/main.cpp)
add_executable(Ex106 Ex106/main.cpp)
add_executable(Ex113 Ex121/main.cpp)
add_executable(Ex122 Ex122/main.cpp)
add_executable(Ex136 Ex137/main.cpp)
add_executable(Ex152 Ex152/main.cpp)
add_executable(Ex187 Ex187/main.cpp)
add_executable(Ex238 Ex238/main.cpp)
add_executable(Ex260 Ex260/main.cpp)
add_executable(Ex268 Ex268/main.cpp)
add_executable(Ex335 Ex335/main.cpp)
add_executable(Ex337 Ex337/main.cpp)
add_executable(Ex338 Ex338/main.cpp)