cmake_minimum_required (VERSION 2.6)

project(leetcode)

include(CheckCXXCompilerFlag)
CHECK_CXX_COMPILER_FLAG("-std=c++11" COMPILER_SUPPORTS_CXX11)
CHECK_CXX_COMPILER_FLAG("-std=c++0x" COMPILER_SUPPORTS_CXX0X)
if(COMPILER_SUPPORTS_CXX11)
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
elseif(COMPILER_SUPPORTS_CXX0X)
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++0x")
else()
     message(STATUS "The compiler ${CMAKE_CXX_COMPILER} has no C++11 support. Please use a different C++ compiler.")
endif()

set(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin)

add_executable(Ex001 src/Ex001/main.cpp)
add_executable(Ex002 src/Ex002/main.cpp)
add_executable(Ex003 src/Ex003/main.cpp)
add_executable(Ex004 src/Ex004/main.cpp)
add_executable(Ex049 src/Ex049/main.cpp)
add_executable(Ex053 src/Ex053/main.cpp)
add_executable(Ex062 src/Ex062/main.cpp)
add_executable(Ex078 src/Ex078/main.cpp)
add_executable(Ex105 src/Ex105/main.cpp)
add_executable(Ex106 src/Ex106/main.cpp)
add_executable(Ex113 src/Ex121/main.cpp)
add_executable(Ex122 src/Ex122/main.cpp)
add_executable(Ex136 src/Ex137/main.cpp)
add_executable(Ex152 src/Ex152/main.cpp)
add_executable(Ex187 src/Ex187/main.cpp)
add_executable(Ex238 src/Ex238/main.cpp)
add_executable(Ex260 src/Ex260/main.cpp)
add_executable(Ex268 src/Ex268/main.cpp)
add_executable(Ex335 src/Ex335/main.cpp)
add_executable(Ex337 src/Ex337/main.cpp)
add_executable(Ex338 src/Ex338/main.cpp)