cmake_minimum_required (VERSION 2.6)

project(leetcode)

include(CheckCXXCompilerFlag)
CHECK_CXX_COMPILER_FLAG("-std=c++11" COMPILER_SUPPORTS_CXX11)
CHECK_CXX_COMPILER_FLAG("-std=c++0x" COMPILER_SUPPORTS_CXX0X)
if(COMPILER_SUPPORTS_CXX11)
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
elseif(COMPILER_SUPPORTS_CXX0X)
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++0x")
else()
     message(STATUS "The compiler ${CMAKE_CXX_COMPILER} has no C++11 support. Please use a different C++ compiler.")
endif()

set(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin)

add_executable(Ex001 src/Ex001/two_sum.cpp)
add_executable(Ex002 src/Ex002/add_two_numbers.cpp)
add_executable(Ex003 src/Ex003/longest_substring_without_repeating_characters.cpp)
add_executable(Ex004 src/Ex004/median_of_two_sorted_arrays.cpp)
add_executable(Ex005 src/Ex005/longest_palindromic_substrings.cpp)
add_executable(Ex006 src/Ex006/zig_zag_conversion.cpp)
add_executable(Ex007 src/Ex007/reverse_integer.cpp)
add_executable(Ex008 src/Ex008/string_to_integer_atoi.cpp)
add_executable(Ex009 src/Ex009/palindrome_number.cpp)
add_executable(Ex010 src/Ex010/regular_expression_matching.cpp)
add_executable(Ex011 src/Ex011/container_with_most_water.cpp)
add_executable(Ex012 src/Ex012/integer_to_roman.cpp)
add_executable(Ex013 src/Ex013/roman_to_integer.cpp)
add_executable(Ex014 src/Ex014/longest_common_prefix.cpp)
add_executable(Ex015 src/Ex015/3_sum.cpp)
add_executable(Ex016 src/Ex016/3_sum_closest.cpp)
add_executable(Ex049 src/Ex049/group_anagrams.cpp)
add_executable(Ex053 src/Ex053/maximum_subarray.cpp)
add_executable(Ex062 src/Ex062/unique_paths.cpp)
add_executable(Ex078 src/Ex078/subsets.cpp)
add_executable(Ex091 src/Ex091/decoder_ways.cpp)
add_executable(Ex092 src/Ex092/reverse_linked_list_2.cpp)
add_executable(Ex105 src/Ex105/main.cpp)
add_executable(Ex106 src/Ex106/main.cpp)
add_executable(Ex112 src/Ex112/main.cpp)
add_executable(Ex113 src/Ex113/main.cpp)
add_executable(Ex121 src/Ex121/main.cpp)
add_executable(Ex122 src/Ex122/main.cpp)
add_executable(Ex136 src/Ex136/main.cpp)
add_executable(Ex137 src/Ex137/main.cpp)
add_executable(Ex152 src/Ex152/main.cpp)
add_executable(Ex187 src/Ex187/main.cpp)
add_executable(Ex206 src/Ex206/reverse_linked_list.cpp)
add_executable(Ex238 src/Ex238/main.cpp)
add_executable(Ex260 src/Ex260/main.cpp)
add_executable(Ex268 src/Ex268/main.cpp)
add_executable(Ex335 src/Ex335/main.cpp)
add_executable(Ex337 src/Ex337/main.cpp)
add_executable(Ex338 src/Ex338/main.cpp)
add_executable(Ex463 src/Ex463/main.cpp)